# experiments

./: .gitignore  README.md
cli/alias_pycharm/: alias_pycharm_windows.py  create_alias_pycharm_windows.sh
cli/ennvironment/: new_system_environment.bat  new_system_environment.py  new_system_environment.sh
docker/: Dockerfile.test
docker/volumes/local_volume_to_container/: docker-compose.yml
docker/volumes/replicate_volumes/: Dockerfile  docker-compose.yml  entrypoint.sh
fastapi_middlewares/: main.py  pyproject.toml
